--- a/FoodPin/Storyboard/Base.lproj/Main.storyboard
+++ b/FoodPin/Storyboard/Base.lproj/Main.storyboard
@@ -131,7 +131,7 @@
                                             <rect key="frame" x="14" y="316" width="100" height="20"/>
                                             <color key="backgroundColor" red="0.90588235289999997" green="0.29803921570000003" blue="0.23529411759999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                             <constraints>
-                                                <constraint firstAttribute="height" constant="20" id="6oA-f0-vJf"/>
+                                                <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="20" id="6oA-f0-vJf"/>
                                                 <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="U9J-4n-o5R"/>
                                             </constraints>
                                             <fontDescription key="fontDescription" style="UICTFontTextStyleCaption1"/>
